--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 /javaCode/target
 /javaCode/.idea/workspace.xml
 /additional_files/java-callgraph
+/ClassifiersNeural.pyc
+/additional_functions.pyc
+/filediff.pyc
