--- a/javaCode/pom.xml
+++ b/javaCode/pom.xml
@@ -9,6 +9,29 @@
     <version>1.0-SNAPSHOT</version>
     <build>
         <plugins>
+			<plugin>
+			<groupId>org.codehaus.mojo</groupId>
+			<artifactId>build-helper-maven-plugin</artifactId>
+			<version>1.7</version>
+			<executions>
+			  <execution>
+				<id>attach-artifacts</id>
+				<phase>package</phase>
+				<goals>
+				  <goal>attach-artifact</goal>
+				</goals>
+				<configuration>
+				  <artifacts>
+					<artifact>
+					  <file>target/Code-${project.version}.jar</file>
+					  <type>jar</type>
+					  <classifier>tools</classifier>
+					</artifact>
+				  </artifacts>
+				</configuration>
+			  </execution>
+			</executions>
+		  </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
